media/nzbget/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media
spec:
  selector:
    app: nzbget
  ports:
  - port: 6789
    targetPort: 6789
